# filemerger

./: .gitignore  Cargo.toml  README.md
src/: cache_handler.rs  main.rs  merge_file.rs  merge_file_manager.rs  settings.rs
tests/: data1.txt  data2.txt  functional_tests.py
tests/files/: test1.cache  test2.output
tests/files/cache_files/: test1.cache  test2.cache
tests/files/data_files/: generate_test_data.py
