[package]

name = "file-merger"
version = "0.2.0"
authors = ["Michael Robbins <michael@dalmura.com.au>"]
homepage = "https://github.com/michael-robbins/filemerger"
repository = "https://github.com/michael-robbins/filemerger"

[dependencies]
getopts = "0.*.*"
flate2 = "0.*.*"
bzip2 = "0.*.*"
log = "0.*.*"
env_logger = "0.*.*"
glob = "0.*.*"
yaml-rust = "0.*.*"
